third_party/move/move-compiler-v2/tests/more-v1/parser/friend_decl_address_only.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/friend_decl_address_only.move:3:16
  │
3 │     friend 0x42;
  │            ----^ Unexpected ';'
  │            │
  │            Expected '::' after an address in a module access chain
